webpack/css/pages/dashboard.css
/* ... */
.dashboard section.new .features .feature:last-child {
    margin-right: 0;
}

.dashboard section.new .features .feature .media {
    width: 100%;
    height: 150px;
    background-size: cover;
    background-position: center center;
    border-radius: 15px 15px 0 0;
}

.dashboard section.new .features .feature .data {
    padding: 10px;
}

.dashboard section.new .features .feature .data .title {
    font-size: 22px;
    margin-bottom: 5px;
}

.dashboard section.new .features .feature .data .desc {
    font-size: 14px;
}

.dashboard section.charts {
    margin: 40px 0 60px;
}

.dashboard section.charts canvas {
    max-width: 400px;
    max-height: 400px;
}

.dashboard section .algorithm {
    display: flex;
    align-items: center;
    max-width: 600px;
    padding: 15px;
    background: rgba(0, 0, 0, .075);
    border-radius: 15px;
    cursor: pointer;
}

.dashboard section .algorithm .icon {
    margin-right: 10px;
    min-width: 50px;
    height: 50px;
    background-image: url('https://static.kilianpeyron.fr/leitlearn/img/leitlearn_brain_7437345.png');
    background-size: cover;
}

.dashboard section .algorithm .text {
    display: flex;
    flex-direction: column;
    font-weight: 500;
}

.dashboard section .algorithm .text span {
    color: rgba(0, 0, 0, .7);
    font-size: 13px;
}

.overview {
    cursor: pointer;
}

.overview .progress {
    padding: 10px;
    margin-bottom: 10px;
    border: 1px solid rgba(0, 0, 0, .125);
    border-radius: 25px;
}

.overview progress {
    -webkit-appearance: none;
    width: 100%;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.overview progress[value] {
    background: white;
    border: 1px solid #ccc;
    border-radius: 10px;
    height: 20px;
}

.overview progress[value]::-webkit-progress-bar {
    background-color: #f0f0f0;
    border-radius: 5px;
}

.overview progress[value]::-webkit-progress-value {
    background: var(--main-bg-color);
    border-radius: 5px;
}

.overview progress[value]::-moz-progress-bar {
    background: var(--main-bg-color);
    border-radius: 5px;
}

.overview .card {
    position: relative;
    display: none;
    width: 100%;
    height: 450px;
    perspective: 1000px;
    transform-style: preserve-3d;
    transition: transform 0.5s;
}

.overview .card.active {
    display: block;
}

.overview .card:hover .info::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: white;
    backdrop-filter: blur(30px);
    border-radius: 10px;
    z-index: -1;
}

.overview .card:hover .info,
.overview .card:hover .card-front .info::before {
    opacity: 1;
}

.overview .card:hover .card-back .info::before,
.overview .card:hover .card-back .info,
.overview .card.flipped .info::before,
.overview .card.flipped .info {
    opacity: 0;
}

.overview .card.flipped {
    transform: rotateX(180deg);
}

.overview .card-front,
.overview .card-back,
.overview .info {
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    backface-visibility: hidden;
    font-size: 25px;
    font-weight: 500;
    border-radius: 10px;
    border: 1px solid rgba(0, 0, 0, .125);
}

.overview .card-front p,
.overview .card-back p {
    max-width: 400px;
    text-align: center;
    word-break: break-word;
}

.overview .info {
    position: relative;
    display: flex;
    align-items: center;
    opacity: 0;
    transition: opacity 0.5s;
    font-size: 30px;
    font-weight: 600;
    z-index: 1;
}

.overview .info i {
    margin-left: 7px;
}

.overview .card-front {
    display: flex;
    flex-direction: column;
    background: white;
    z-index: 0;
}

.overview .card-front audio,
.overview .card-front img {
    margin-top: 20px;
}

.overview .card-front img {
    max-width: 300px;
    border-radius: 10px;
}

.overview .card-back {
    background: var(--main-bg-color);
    transform: rotateX(180deg);
    z-index: 0;
}

.overview .action-btn {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 10px;
    width: 50px;
    height: 50px;
    color: rgba(0, 0, 0, .6);
    border-radius: 50%;
    border: 2px solid rgba(0, 0, 0, .1);
    transition: all .3s;
}

.overview .actions-btn {
    display: flex;
    align-items: center;
    width: 300px;
    margin: 20px auto 0;
    justify-content: space-between;
}

.overview .action-btn span {
    font-size: 35px;
}

.overview .actions-btn .action-btn:active {
    transform: scale(0.90);
}

.overview .actions-btn .action-btn:hover {
    background: rgba(0, 0, 0, .1);
}

.dashboard .detail-tab-flashcards {
    margin-top: 20px;
}

.dashboard .add-flashcard {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    float: right;
    padding: 10px 15px;
    margin: 5px 0 15px auto;
    background: #1DBC60;
    color: white;
    font-weight: 500;
    border-radius: 10px;
    transition: all .3s;
    cursor: pointer;
}

.dashboard .add-flashcard span {
    margin-left: 7px;
}

.dashboard .add-flashcard:active {
    transform: scale(0.98);
}

.dashboard .packets {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    margin-top: 0;
    margin-bottom: 0;
}

.dashboard .packets a {
    color: black;
    text-decoration: none;
}

.dashboard .packets .packet {
    position: relative;
    border-radius: 10px;
    height: 175px;
    padding: 10px 15px;
    margin: 0 20px 20px 0;
    border: 1px solid rgba(0, 0, 0, .125);
    cursor: pointer;
}

.dashboard .packets .packet {
    padding: 10px 12px;
    justify-content: flex-start;
}

.dashboard .flashcards .flashcard .title {
    font-size: 21px;
}

.dashboard .packets .packet .actions {
    position: absolute;
    top: 10px;
    right: 7px;
}

.dashboard .packets .packet.ai-packet .title,
.dashboard .packets .packet.ai-packet .action,
.dashboard .packets .packet.ai-packet .flashcards-number {
    color: white;
}
/* ... */

